# infrasim-compute

./: .functionaltests  .gitmodules  .unittests  ChangeLog  README.md  README.rst  package_install.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
components-version/: packages.yml
data/: startcmd  vnode.xml
data/conf/: infrasim.conf  infrasim.yml  vbmc.conf  version.yml
data/dell_c6320/: dell_c6320.emu
data/dell_r630/: dell_r630.emu
data/dell_r640/: dell_r640.emu
data/dell_r730/: dell_r730.emu
data/dell_r730xd/: dell_r730xd.emu
data/dell_r740xd/: dell_r740xd.emu
data/lib/: libIPMIlanserv.so.0.0.1  libOpenIPMIposix.so.0.0.1  libOpenIPMIutils.so.0.0.1
data/quanta_d51/: quanta_d51.emu
data/quanta_t41/: quanta_t41.emu
data/s2600kp/: s2600kp.emu
data/s2600tp/: .config  .default.config  s2600tp.emu
data/s2600wtt/: s2600wtt.emu
data/script/: chassiscontrol  resetcmd  startcmd  stopcmd
data/vnode/: vbmc.conf  vbmc_docker.conf  vnode.emu
etc/: infrasim.conf.example  infrasim.full.yml.example  infrasim.yml.default  infrasim.yml.example  vbmc.conf.example
infrasim/: __init__.py  chassis.py  chassis_controller.py  cli.py  cloud_img.py  colors.py  config.py  config_manager.py  console.py  dae.py  daemon.py  filelock.py  global_status.py  helper.py  init.py  ipmi.py  log.py  main.py  model.py  package_install.py  package_manager.py  qemu.py  racadm.py  racadmsim.py  redfish.py  repl.py  socat.py  sshclient.py  sshim.py  version.py  vm.py  workspace.py  yaml_loader.py
infrasim/chassis/: __init__.py  agent.py  dataset.py  emu_data.py  share_memory.py  smbios.py
infrasim/ipmicons/: command.py  common.py  sdr.py  sel.py  sensor.py  sshsrv.py
infrasim/ipmiconsole/: __init__.py  command.py  common.py  env.py  sdr.py  sel.py  sensor.py
infrasim/model/: __init__.py
infrasim/monitor/: __init__.py  monitor_logger.py  qemu_api.py
infrasim/racadmsim/: .__init__.py.swp  __init__.py  api.py  env.py  model.py
infrasim/static/: centos-ks.cfg
template/: chassiscontrol  infrasim.yml  lancontrol  setbootcmd  startcmd  vbmc.conf  version.yml
template/racadmsim/: hwinventory_storage.j2  hwinventory_storage_drive_satadom.j2  hwinventory_storage_drive_scsi.j2  macros.j2  storage.j2  storage_drive_satadom.j2  storage_drive_scsi.j2
test/: __init__.py  fixtures.py
test/functional/: test_bmc_peer_communication.py  test_boot.py  test_boot_order.py  test_chassis.py  test_cli_commands.py  test_esxi.py  (+41 more)
(+73 files in other folders)
