[metadata]
name = infrasim
summary = EMC GHTS infrasim
description-file =
    README.md
author = EMC
author-email = infrasim.dev@emc.com
home-page = http://www.emc.com
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    infrasim
scripts =
    bin/infrasim-init
    bin/infrasim-main
    bin/ipmi-console
    bin/qemu-system-x86_64
    bin/ipmi_sim
data_files =
    etc/infrasim = data/*
