[metadata]
name = infrasim-compute
summary = Bare-metal server simulator
version = 1.0.5
description-file =
    README.md
author = EMC
author-email = infrasim.dev@emc.com
home-page = http://www.emc.com
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
license = 'Apache 2.0'

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    infrasim
scripts =
    bin/infrasim-init
    bin/infrasim-main
    bin/ipmi-console
    package_install.sh
data_files =
    etc/infrasim = data/*

[bdist_wheel]
universal = 1
