[metadata]
name = infrasim-compute
summary = Bare-metal server simulator
description-file =
    README.md
author = EMC
author-email = infrasim.dev@emc.com
home-page = http://www.emc.com
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
license = 'Apache 2.0'

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    infrasim
scripts =
    bin/infrasim
    bin/ipmi-console
data_files =
    infrasim/data = data/*
    infrasim/template = template/*
    infrasim/etc = etc/*

